[package]
authors = ["Felix Bytow <drako@drako.guru>"]
description = "Tic-tac-toe game"
edition = "2021"
license = "MIT"
name = "tic-tac-toe"
readme = "README.md"
repository = "https://github.com/Drako/tic-tac-toe.git"
version = "0.1.0"

[dependencies]
rand = "0.8.5"

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    "bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit",
    "jpeg",
    "wayland", "x11"
]
